--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,19 +40,21 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  font_awesome_flutter: 10.3.0
+  font_awesome_flutter: ^10.6.0
 
-  video_player: 2.4.10
+  video_player: ^2.8.1
 
-  visibility_detector: 0.3.3
+  visibility_detector: ^0.4.0+2
 
-  google_fonts: ^6.1.0
+  google_fonts: ^4.0.4
 
   go_router: ^12.0.1
 
   camera: ^0.10.5+5
 
   permission_handler: ^11.0.1
+
+  gallery_saver: ^2.3.2
 
 dev_dependencies:
   flutter_test:
