--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,10 @@ dependencies:
   image_picker: ^1.0.4
 
   provider: ^6.1.1
+
   shared_preferences: ^2.2.2
+
+  flutter_riverpod: ^2.4.8
 
 dev_dependencies:
   flutter_test:
