--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,10 @@ dependencies:
   shared_preferences: ^2.2.2
 
   flutter_riverpod: ^2.4.8
+  firebase_core: ^2.24.0
+  firebase_auth: ^4.15.0
+  cloud_firestore: ^4.13.3
+  firebase_storage: ^11.5.3
 
 dev_dependencies:
   flutter_test:
