--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   cloud_firestore: ^4.13.3
   firebase_storage: ^11.5.3
   cloud_functions: ^4.5.8
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
