--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   firebase_storage: ^11.5.3
   cloud_functions: ^4.5.8
   fluttertoast: ^8.2.4
+  firebase_messaging: ^14.7.15
 
 dev_dependencies:
   flutter_test:
